add code improvements