@@ -48,13 +48,12 @@ class ContainerServiceTest {
     class GetContainers {
 
         @Test
-        @DisplayName("should return all containers when includeWithoutPorts is true")
-        void shouldReturnAllContainersWhenIncludeWithoutPortsIsTrue() {
+        @DisplayName("should get containers with showAll=false")
+        void shouldGetContainersWithShowAllFalse() {
             Container container1 = createMockContainer();
             Container container2 = createMockContainer();
-
-            ContainerDTO dto1 = createContainerDTO("container1", Set.of(80));
-            ContainerDTO dto2 = createContainerDTO("container2", Collections.emptySet());
+            ContainerDTO dto1 = createContainerDTO("container1", Set.of(8080));
+            ContainerDTO dto2 = createContainerDTO("container2", Set.of(9090));
 
             when(dockerClient.listContainersCmd()).thenReturn(listContainersCmd);
             when(listContainersCmd.withShowAll(false)).thenReturn(listContainersCmd);
@@ -66,27 +65,8 @@ class ContainerServiceTest {
 
             assertEquals(2, result.size());
             verify(listContainersCmd).withShowAll(false);
-        }
-
-        @Test
-        @DisplayName("should filter containers without ports when includeWithoutPorts is false")
-        void shouldFilterContainersWithoutPortsWhenIncludeWithoutPortsIsFalse() {
-            Container container1 = createMockContainer();
-            Container container2 = createMockContainer();
-
-            ContainerDTO dto1 = createContainerDTO("container1", Set.of(80));
-            ContainerDTO dto2 = createContainerDTO("container2", Collections.emptySet());
-
-            when(dockerClient.listContainersCmd()).thenReturn(listContainersCmd);
-            when(listContainersCmd.withShowAll(false)).thenReturn(listContainersCmd);
-            when(listContainersCmd.exec()).thenReturn(List.of(container1, container2));
-            when(containerMapper.toDTO(container1)).thenReturn(dto1);
-            when(containerMapper.toDTO(container2)).thenReturn(dto2);
-
-            List<ContainerDTO> result = containerService.getContainers(false, false);
-
-            assertEquals(1, result.size());
-            assertEquals("container1", result.getFirst().name());
+            verify(containerMapper).toDTO(container1);
+            verify(containerMapper).toDTO(container2);
         }
 
         @Test
@@ -102,9 +82,30 @@ class ContainerServiceTest {
         }
 
         @Test
+        @DisplayName("should filter containers without public ports when includeWithoutPorts is false")
+        void shouldFilterContainersWithoutPublicPorts() {
+            Container container1 = createMockContainer();
+            Container container2 = createMockContainer();
+            ContainerDTO dtoWithPorts = createContainerDTO("c1", Set.of(8080));
+            ContainerDTO dtoNoPorts = createContainerDTO("c2", Set.of());
+
+            when(dockerClient.listContainersCmd()).thenReturn(listContainersCmd);
+            when(listContainersCmd.withShowAll(anyBoolean())).thenReturn(listContainersCmd);
+            when(listContainersCmd.exec()).thenReturn(List.of(container1, container2));
+            when(containerMapper.toDTO(container1)).thenReturn(dtoWithPorts);
+            when(containerMapper.toDTO(container2)).thenReturn(dtoNoPorts);
+
+            List<ContainerDTO> result = containerService.getContainers(false, false);
+
+            assertEquals(1, result.size());
+            assertEquals(dtoWithPorts, result.get(0));
+        }
+
+        @Test
         @DisplayName("should throw ResponseStatusException when Docker is not reachable")
         void shouldThrowResponseStatusExceptionWhenDockerIsNotReachable() {
-            RuntimeException dockerException = new RuntimeException("Connection failed", new SocketException("Connection refused"));
+            RuntimeException dockerException = new RuntimeException("Connection failed",
+                    new SocketException("Connection refused"));
 
             when(dockerClient.listContainersCmd()).thenReturn(listContainersCmd);
             when(listContainersCmd.withShowAll(anyBoolean())).thenReturn(listContainersCmd);
@@ -112,8 +113,7 @@ class ContainerServiceTest {
 
             ResponseStatusException exception = assertThrows(
                     ResponseStatusException.class,
-                    () -> containerService.getContainers(false, false)
-            );
+                    () -> containerService.getContainers(true, false));
 
             assertEquals("Docker is not reachable", exception.getReason());
         }
@@ -129,9 +129,7 @@ class ContainerServiceTest {
 
             RuntimeException thrown = assertThrows(
                     RuntimeException.class,
-                    () -> containerService.getContainers(false, false)
-            );
-
+                    () -> containerService.getContainers(true, false));
             assertEquals("Some other error", thrown.getMessage());
         }
 
@@ -162,8 +160,6 @@ class ContainerServiceTest {
                 "https://example.com/nginx.png",
                 null,
                 "running",
-                "Up 2 hours"
-        );
+                "Up 2 hours");
     }
 }
-
